<resources>
    <string name="app_name">Android Fundamental</string>
    <string name="first_activity_label">This is the First Activity</string>
    <string name="go_to_second_label">Go To Second Activity</string>
    <string name="second_activity_label">This is the Second Activity</string>
    <string name="intent_label">Intent</string>
    <string name="share_some_text_label">Share Some Text</string>
    <string name="input_title_hint">Input title</string>
    <string name="input_subtitle_hint">Input subtitle</string>
    <string name="input_description_hint">Input Description</string>
    <string name="fragment_label">Fragment</string>
    <string name="navigation_label">Navigation</string>
</resources>