<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_go_to_intent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_label" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_go_to_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_label" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_go_to_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/navigation_label" />

</LinearLayout>