<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".intent.FirstActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/first_activity_label"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_go_to_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_second_label" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_go_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_some_text_label" />

</LinearLayout>